--- a/generators/app/templates/app/navigation/drawer/drawer-button.js.ejs
+++ b/generators/app/templates/app/navigation/drawer/drawer-button.js.ejs
@@ -1,5 +1,5 @@
 import { Image, Platform, View, StyleSheet } from 'react-native';
-import TouchableItem from '@react-navigation/drawer/src/views/TouchableItem';
+import TouchableItem from './touchable-item';
 import { Images } from '../../shared/themes';
 import * as React from 'react';
 import { toggleDrawer } from '../nav-ref';
