--- a/generators/app/templates/app/modules/home/launch-screen.styles.js.ejs
+++ b/generators/app/templates/app/modules/home/launch-screen.styles.js.ejs
@@ -1,6 +1,6 @@
 import { StyleSheet } from 'react-native';
 
-import { Metrics, ApplicationStyles, Colors } from '../../shared/themes/';
+import { Metrics, ApplicationStyles, Colors } from '../../shared/themes';
 
 export default StyleSheet.create({
   ...ApplicationStyles.screen,
