--- a/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
+++ b/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
@@ -10,7 +10,7 @@
 import { View, Text, StyleSheet, TouchableOpacity } from 'react-native';
 import * as Linking from 'expo-linking';
 import React from 'react'
-import { Colors } from '../../shared/themes/'
+import { Colors } from '../../shared/themes'
 
 const links = [
   <%_ if (context.authenticationType === 'oauth2') { _%>
