--- a/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.js.ejs
@@ -69,6 +69,7 @@ const styles = StyleSheet.create({
   input: {
     borderStyle: 'solid',
     borderWidth: 1,
+    borderColor: '#c0cbd3',
     borderRadius: 5,
     backgroundColor: 'white',
     paddingVertical: 5,
