--- a/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
@@ -56,7 +56,7 @@ export default React.forwardRef((props, ref) => {
           keyboardType="numeric"
           value={values[name]}
           onChangeText={(text) => {
-            const numberRegex = new RegExp(/^-?(0|[1-9]\d*)?(\.\d+)?$/);
+            const numberRegex = new RegExp(/^-?(\d*)?\.?(\d+)?$/);
             if (text.length === 0 || numberRegex.test(text.toString())) {
               setFieldValue(name, text);
             }
