--- a/generators/app/templates/app/shared/components/form/jhi-form-field.story.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-field.story.js.ejs
@@ -45,6 +45,7 @@ function DemoForm() {
   // create refs for handling onSubmit functionality
   const formRef = createRef();
   const stringFieldRef = createRef();
+  const numFieldRef = createRef();
   const booleanFieldRef = createRef();
   const listFieldRef = createRef();
   const dateFieldRef = createRef();
@@ -52,6 +53,7 @@ function DemoForm() {
 
   const initialValues = {
     stringField: '',
+    numField: 0,
     booleanField: '',
     listField: '',
     dateField: new Date(),
@@ -70,12 +72,14 @@ function DemoForm() {
           autoCapitalize="none"
         />
         <FormField
-          inputType="boolean"
-          name="booleanField"
-          ref={booleanFieldRef}
-          label="Boolean Field"
-          placeholder="Enter boolean field"
+          inputType="number"
+          name="numField"
+          ref={numFieldRef}
+          label="Num Field"
+          placeholder="Enter num field"
+          autoCapitalize="none"
         />
+        <FormField inputType="boolean" name="booleanField" ref={booleanFieldRef} label="Boolean Field" placeholder="Enter boolean field" />
         <FormField inputType="select-one" name="listField" ref={listFieldRef} label="List Field" listItems={sports} />
         <FormField inputType="date" name="dateField" ref={dateFieldRef} label="Date Field" />
         <FormField inputType="datetime" name="dateTimeField" ref={dateTimeFieldRef} label="Date Time Field" />
