--- a/generators/entity/templates/entity-detail-screen.js.ejs
+++ b/generators/entity/templates/entity-detail-screen.js.ejs
@@ -12,27 +12,29 @@ import <%= context.entityNameCapitalized %>DeleteModal from './<%= context.entit
 import styles from './<%= context.entityFileName %>-styles'
 
 function <%= context.entityNameCapitalized %>DetailScreen(props) {
-  const { route, get<%= context.entityNameCapitalized %>, navigation } = props;
+  const { route, get<%= context.entityNameCapitalized %>, navigation, <%= context.entityInstance %>, fetching, error } = props;
   const [deleteModalVisible, setDeleteModalVisible] = React.useState(false);
+  // prevents display of stale reducer data
+  const correctEntityLoaded = route.params?.entityId?.toString() === <%= context.entityInstance %>.id?.toString();
 
   useFocusEffect(
     React.useCallback(() => {
       if (!route.params || !route.params.entityId) {
-        navigation.canGoBack() ? navigation.goBack() : navigation.navigate('<%= context.entityNameCapitalized %>');
+        navigation.navigate('<%= context.entityNameCapitalized %>');
       } else {
         get<%= context.entityNameCapitalized %>(route.params.entityId);
       }
     }, [route, get<%= context.entityNameCapitalized %>, navigation]),
   );
 
-  if (!props.<%= context.entityInstance %> && !props.fetching && props.error) {
+  if (!<%= context.entityInstance %>.id && !fetching && error) {
     return (
       <View style={styles.loading}>
         <Text>Something went wrong fetching the <%= context.entityNameCapitalized %>.</Text>
       </View>
     );
   }
-  if (!props.<%= context.entityInstance %> || props.fetching) {
+  if (!<%= context.entityInstance %>.id || fetching || !correctEntityLoaded) {
     return (
       <View style={styles.loading}>
         <ActivityIndicator size="large" />
@@ -42,42 +44,42 @@ function <%= context.entityNameCapitalized %>DetailScreen(props) {
   return (
     <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID="<%= context.entityInstance %>DetailScrollView">
       <Text style={styles.label}>Id:</Text>
-      <Text>{props.<%= context.entityInstance %>.id}</Text>
+      <Text>{<%= context.entityInstance %>.id}</Text>
       <%_ context.fields.filter(field => !field.id).forEach(function (field) { _%>
       {/* <%= field.fieldNameCapitalized %> Field */}
       <Text style={styles.label}><%= field.fieldNameCapitalized %>:</Text>
       <%_ if (field.fieldType === 'LocalDate') { _%>
-        <Text testID='<%= field.fieldName %>'>{convertLocalDateToString(props.<%= context.entityInstance %>.<%= field.fieldName %>)}</Text>
+        <Text testID='<%= field.fieldName %>'>{convertLocalDateToString(<%= context.entityInstance %>.<%= field.fieldName %>)}</Text>
       <%_ } else if (field.fieldType === 'ZonedDateTime' || field.fieldType === 'Instant' || field.fieldType === 'Boolean') { _%>
-        <Text testID='<%= field.fieldName %>'>{String(props.<%= context.entityInstance %>.<%= field.fieldName %>)}</Text>
+        <Text testID='<%= field.fieldName %>'>{String(<%= context.entityInstance %>.<%= field.fieldName %>)}</Text>
       <%_ } else if (field.fieldType === 'byte[]' && field.fieldTypeBlobContent === 'any') { _%>
-        <Text testID='<%= field.fieldName %>'>Open {props.<%= context.entityInstance %>.<%= field.fieldName %>ContentType} (not implemented)</Text>
+        <Text testID='<%= field.fieldName %>'>Open {<%= context.entityInstance %>.<%= field.fieldName %>ContentType} (not implemented)</Text>
       <%_ } else if (field.fieldType === 'byte[]' && field.fieldTypeBlobContent === 'image') { _%>
-        <Text testID='<%= field.fieldName %>ContentType'>{props.<%= context.entityInstance %>.<%= field.fieldName %>ContentType}</Text>
+        <Text testID='<%= field.fieldName %>ContentType'>{<%= context.entityInstance %>.<%= field.fieldName %>ContentType}</Text>
         <Image
           testID="<%= field.fieldName %>"
           style={styles.imageBlob}
-          source={{ uri: `data:${props.<%= context.entityInstance %>.<%= field.fieldName %>ContentType};base64,${props.<%= context.entityInstance %>.<%= field.fieldName %>}` }}
+          source={{ uri: `data:${<%= context.entityInstance %>.<%= field.fieldName %>ContentType};base64,${<%= context.entityInstance %>.<%= field.fieldName %>}` }}
         />
       <%_ } else { _%>
-        <Text testID='<%= field.fieldName %>'>{props.<%= context.entityInstance %>.<%= field.fieldName %>}</Text>
+        <Text testID='<%= field.fieldName %>'>{<%= context.entityInstance %>.<%= field.fieldName %>}</Text>
       <%_ } _%>
       <%_ }) _%>
       <%_ context.relationships.filter(relation => relation.ownerSide).forEach(function (relation) { _%>
         <Text style={styles.label}><%= relation.relationshipNameHumanized %>:</Text>
         <%_ if (relation.relationshipType === 'many-to-many') { _%>
-        {props.<%= context.entityInstance %>.<%= relation.relationshipNamePlural %> && props.<%= context.entityInstance %>.<%= relation.relationshipNamePlural %>.map((entity, index) => (
+        {<%= context.entityInstance %>.<%= relation.relationshipNamePlural %> && <%= context.entityInstance %>.<%= relation.relationshipNamePlural %>.map((entity, index) => (
           <Text key={index} testID={`<%= relation.relationshipNamePlural %>-${index}`}>{String(entity.<%= relation.otherEntityField %> || '')}</Text>
         ))}
         <%_ } else { _%>
-        <Text testID='<%= relation.relationshipName %>'>{String(props.<%= context.entityInstance %>.<%= relation.relationshipName %> ? props.<%= context.entityInstance %>.<%= relation.relationshipName %>.<%= relation.otherEntityField %> : '')}</Text>
+        <Text testID='<%= relation.relationshipName %>'>{String(<%= context.entityInstance %>.<%= relation.relationshipName %> ? <%= context.entityInstance %>.<%= relation.relationshipName %>.<%= relation.otherEntityField %> : '')}</Text>
         <%_ } _%>
       <%_ }) _%>
 
       <View style={styles.entityButtons}>
         <RoundedButton
           text="Edit"
-          onPress={() => navigation.navigate('<%= context.entityNameCapitalized %>Edit', { entityId: props.<%= context.entityInstance %>.id })}
+          onPress={() => navigation.navigate('<%= context.entityNameCapitalized %>Edit', { entityId: <%= context.entityInstance %>.id })}
           accessibilityLabel={'<%= context.entityNameCapitalized %> Edit Button'}
           testID="<%= context.entityInstance %>EditButton"
         />
@@ -92,7 +94,7 @@ function <%= context.entityNameCapitalized %>DetailScreen(props) {
             navigation={navigation}
             visible={deleteModalVisible}
             setVisible={setDeleteModalVisible}
-            entity={props.<%= context.entityInstance %>}
+            entity={<%= context.entityInstance %>}
             testID="<%= context.entityInstance %>DeleteModal"
           />
         )}
