--- a/generators/entity/templates/entity-reducer.js.ejs
+++ b/generators/entity/templates/entity-reducer.js.ejs
@@ -49,7 +49,7 @@ export const INITIAL_STATE = Immutable({
   <%_ } _%>
   deleting: false,
   updateSuccess: false,
-  <%= context.entityInstance %>: null,
+  <%= context.entityInstance %>: {id: undefined},
   <%= context.entityInstance %>List: [],
   errorOne: null,
   errorAll: null,
@@ -71,7 +71,7 @@ export const request = (state) =>
   state.merge({
     fetchingOne: true,
     errorOne: false,
-    <%= context.entityInstance %>: null
+    <%= context.entityInstance %>: INITIAL_STATE.<%= context.entityInstance %>
   })
 
 // request the data from an api
@@ -153,7 +153,7 @@ export const deleteSuccess = (state) => {
   return state.merge({
     deleting: false,
     errorDeleting: null,
-    <%= context.entityInstance %>: null
+    <%= context.entityInstance %>: INITIAL_STATE.<%= context.entityInstance %>
   })
 }
 
@@ -163,7 +163,7 @@ export const failure = (state, action) => {
   return state.merge({
     fetchingOne: false,
     errorOne: error,
-    <%= context.entityInstance %>: null
+    <%= context.entityInstance %>: INITIAL_STATE.<%= context.entityInstance %>
   })
 }
 // Something went wrong fetching all entities.
