more cleanup and general fixes
remove unused files
set default platform font to a font provided by the platform
wait for success/error messages to be visible before checking them
on new entity, send to detail screen, otherwise pop to detail screen

--- a/generators/app/templates/.env.ejs
+++ b/generators/app/templates/.env.ejs
@@ -2,5 +2,5 @@
 # Now your app will have access to the variables added below.
 # For more instructions see section "Secrets" in README.md
 
-API_URL=https://myapi.com
-GOOGLE_MAPS_API_KEY=abcdefgh
+# for storybook fast refresh support
+FAST_REFRESH=true
