--- a/generators/app/templates/.eslintrc.js.ejs
+++ b/generators/app/templates/.eslintrc.js.ejs
@@ -13,6 +13,7 @@ module.exports = {
     fetch: 'readonly',
     navigator: 'readonly',
     XMLHttpRequest: 'readonly',
+    __DEV__: 'readonly',
     FormData: 'readonly',
     React$Element: 'readonly',
     before: 'readonly',
