--- a/generators/app/templates/app/config/app-config.js.ejs
+++ b/generators/app/templates/app/config/app-config.js.ejs
@@ -1,10 +1,8 @@
-import Constants from 'expo-constants';
-
 export default {
   // use 10.0.2.2 for Android to connect to host machine
   apiUrl: 'http://localhost:8080/',
   // use fixtures instead of real API requests
   useFixtures: false,
   // debug mode
-  debugMode: Constants.debugMode,
+  debugMode: __DEV__,
 };
