--- a/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
@@ -20,7 +20,11 @@ function ForgotPasswordScreen(props) {
     email: Yup.string().required().email().label('Email'),
   });
 
-  const onSubmit = (data) => props.resetPassword(data.email);
+  const onSubmit = (data) => {
+    setSuccess('');
+    setError('');
+    props.resetPassword(data.email);
+  };
 
   useDidUpdateEffect(() => {
     if (!props.fetching) {
