--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -23,6 +23,8 @@ function ChangePasswordScreen(props) {
   });
 
   const onSubmit = (data) => {
+    setSuccess('');
+    setError('');
     if (data.newPassword !== data.confirmPassword) {
       setError('Passwords do not match');
       return;
