--- a/generators/app/templates/app/modules/account/register/register-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/register/register-screen.js.ejs
@@ -24,6 +24,8 @@ function RegisterScreen(props) {
   });
 
   const onSubmit = (data) => {
+    setSuccess('');
+    setError('');
     if (data.password !== data.confirmPassword) {
       setError('Passwords do not match');
       return;
