--- a/generators/app/templates/app/shared/themes/application.styles.js.ejs
+++ b/generators/app/templates/app/shared/themes/application.styles.js.ejs
@@ -55,7 +55,7 @@ const ApplicationStyles = {
       alignSelf: 'center',
     },
     errorText: {
-      color: 'red',
+      color: Colors.error,
       fontSize: 14,
     },
     successText: {
