--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -33,14 +33,19 @@ describe('Change Password Screen Tests', () => {
   };
 
   it('should display a popup on change password success', async () => {
+    const expectedLabel = 'Password changed';
     await changePassword(password, newPassword);
-    await expect(element(by.label('Password changed'))).toBeVisible();
+    await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
+    await expect(element(by.label(expectedLabel))).toBeVisible();
     await changePassword(newPassword, password);
-    await expect(element(by.label('Password changed'))).toBeVisible();
+    await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
+    await expect(element(by.label(expectedLabel))).toBeVisible();
   });
 
   it('should display a popup on change password failure', async () => {
+    const expectedLabel = 'Incorrect password';
     await changePassword('invalid-password', 'invalid-password');
-    await expect(element(by.label('Incorrect password'))).toBeVisible();
+    await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
+    await expect(element(by.label(expectedLabel))).toBeVisible();
   });
 });
