--- a/generators/app/templates/app/modules/account/settings/settings-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/settings/settings-screen.js.ejs
@@ -20,7 +20,11 @@ function SettingsScreen(props) {
     email: Yup.string().required().email().label('Email'),
   });
 
-  const onSubmit = (data) => props.updateAccount(data);
+  const onSubmit = (data) => {
+    setSuccess('');
+    setError('');
+    props.updateAccount(data);
+  };
 
   useDidUpdateEffect(() => {
     if (!props.updating) {
