--- a/generators/app/templates/app/modules/home/launch-screen.js.ejs
+++ b/generators/app/templates/app/modules/home/launch-screen.js.ejs
@@ -14,7 +14,8 @@ function LaunchScreen(props) {
       <ScrollView contentInsetAdjustmentBehavior="automatic" style={styles.scrollView}>
         <View style={styles.centered}>
           <Image source={Images.logoJhipster} style={styles.logo} />
-          <Text style={styles.welcomeText}>{'Welcome to your JHipster React Native app.'}</Text>
+          <Text style={styles.welcomeText}><%= context.reactNativeAppName %></Text>
+          <Text style={styles.welcomeText}>Welcome to your JHipster React Native app.</Text>
         </View>
         {account && account.login ? (
           <View style={[styles.authContainer, styles.authContainerTrue]}>
